--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,10 @@ body {
     overflow: hidden;
 }
 
+header {
+    height: 100%;
+}
+
 .content {
     display: flex;
     justify-content: space-between;
@@ -37,6 +41,41 @@ body {
 
 .ham-menu img {
     height: 1.7rem;
+}
+
+#menuIcon:hover {
+    height: 1.75rem;
+    cursor: pointer;
+    transition: .2s;
+}
+
+.current {
+    color: gray;
+}
+
+.hide {
+    display: none;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+}
+
+ul {
+    list-style-type: none;
+    line-height: 4rem;
+    font-size: 2rem;
+}
+
+.contentMenu {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    color: white;
+    background-color: #2B89EA;
 }
 
 @media screen and (min-width: 675px) {
