--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 header {
-    height: 100%;
+    /* height: 100%; */
 }
 
 .content {
@@ -42,6 +42,8 @@ header {
 
 .ham-menu img {
     height: 2.2rem;
+    /* border: 2px solid rgb(82, 200, 243);
+    border-radius: .4rem; */
 }
 
 .current {
@@ -67,19 +69,72 @@ ul {
     flex-direction: column;
     align-items: center;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     color: white;
     background-color: #2B89EA;
 }
 
 .hide {
     display: none;
+    transition: height 2s ease-in;
 }
 
 .cont {
     content: url("../images/header/x.svg");
     height: 1.2rem !important;
     margin-right: .7rem;
+}
+
+
+/* ----------------------------------------------------------------- */
+
+
+/* NAVMENU */
+
+
+/* ******* */
+
+
+/* MAIN */
+
+
+/* ----------------------------------------------------------------- */
+
+.main-top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+    margin: 1rem 0;
+}
+
+.profile-picture img {
+    height: 2rem;
+    margin-top: .4rem;
+    margin-left: .5rem;
+    border: 2px solid #2B89EA;
+    border-radius: 50%;
+}
+
+.icon-chat img {
+    height: 2rem;
+    margin-right: .5rem;
+}
+
+.search-bar input {
+    height: 3rem;
+    width: 70vw;
+    border: none;
+    border-radius: 1rem;
+    font-size: 1rem;
+    background-color: lightgray;
+    opacity: .5;
+}
+
+hr {
+    border: none;
+    height: 1px;
+    background-color: rgb(230, 230, 230);
 }
 
 @media screen and (min-width: 675px) {
