--- a/css/style.css
+++ b/css/style.css
@@ -7,12 +7,10 @@
 body {
     height: 100vh;
     font-family: 'Lato', sans-serif;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
-header {
-    /* height: 100%; */
-}
+header {}
 
 .content {
     display: flex;
