--- a/css/style.css
+++ b/css/style.css
@@ -305,6 +305,11 @@ hr {
 
 /* ----------------------------------------------------------------- */
 
+.scroller {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+}
+
 .scrolling-wrapper {
     display: flex;
     flex-wrap: nowrap;
@@ -331,7 +336,26 @@ hr {
 
 .scroller-card img {
     height: 20rem;
+    border-radius: 1rem;
 }
+
+
+/* .scroller-card {
+    position: relative;
+}
+
+.scroller-card:after {
+    color: white;
+    display: flex;
+    content: 'Some';
+    border-radius: 1rem;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(98, 98, 99, 0.5)), color-stop(100%, rgba(0, 0, 0, 0.5)));
+} */
 
 @media screen and (min-width: 675px) {
     .content {
