--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@ header {}
 .content {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     height: 5rem;
     background-color: #2B89EA;
 }
@@ -76,7 +77,7 @@ ul {
     background-color: #2B89EA;
 }
 
-.hide {
+.hide-on-mobile {
     display: none;
     transition: height 2s ease-in;
 }
@@ -85,6 +86,28 @@ ul {
     content: url("../images/header/x.svg");
     height: 1.2rem !important;
     margin-right: .7rem;
+}
+
+.menu-desktop {
+    display: flex;
+    align-items: flex-end;
+    gap: 2rem;
+}
+
+.sub-menu {
+    display: flex;
+    max-width: 1400px;
+    font-size: .9rem;
+    flex-direction: column;
+    align-items: center;
+}
+
+.hide {
+    display: none;
+}
+
+.sub-menu img {
+    height: 1.8rem;
 }
 
 
@@ -125,6 +148,7 @@ ul {
 
 .search-bar input {
     height: 3rem;
+    max-width: 700px;
     width: 70vw;
     border: none;
     border-radius: .5rem;
@@ -357,12 +381,16 @@ hr {
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(98, 98, 99, 0.5)), color-stop(100%, rgba(0, 0, 0, 0.5)));
 } */
 
-@media screen and (min-width: 675px) {
+@media screen and (min-width: 750px) {
     .content {
         /* background-color: aquamarine; */
     }
     .follow img {
         content: url("../images/main/follow-desktop.png");
+    }
+    .main-top {
+        justify-content: center;
+        gap: 1rem;
     }
 }
 
